<resources>
    <string name="app_name">e-Covid</string>
    <string name="back_Button" />
    <string name="new_user_register_account">New User? Register account</string>
    <string name="edit_dependents">EDIT DEPENDENTS</string>
    <string name="full_name">Full Name</string>

    <string name="relation">Relation</string>
    <string name="save_changes">Save Changes</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="welcome_to">WELCOME TO</string>
    <string name="username">Username</string>

    <string name="login">Login</string>
    <string name="manage_dependent">MANAGE DEPENDENT</string>
    <string name="my_dependents">MY DEPENDENTS</string>
    <string name="add_dependents">Add Dependents</string>
    <string name="registration">REGISTRATION</string>
    <string name="passport_number">Passport Number</string>
    <string name="country">Country</string>
    <string name="email_or_phone_number">Email or Phone Number</string>
    <string name="password">Password</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="register">REGISTER</string>
    <string name="ic_passport_number">IC / passport Number</string>
    <string name="state_country">state / Country</string>
    <string name="update_profile">UPDATE PROFILE</string>
    <string name="name">Name</string>
    <string name="ic_passport_no">IC/Passport No.</string>
    <string name="email_phone_no">Email/Phone No.</string>
    <string name="update_state_country">State/Country</string>
    <string name="save">Save</string>
    <string name="user_profile">USER PROFILE</string>
    <string name="update">Update</string>
    <string name="profile_manage_dependent">Manage Dependent</string>
    <string name="vaccine_certificate">VACCINE CERTIFICATE</string>
    <string name="cal1">View information user quarantine record</string>


</resources>